add faker to dev-dependencies and random add test data

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/bethannezink/algorithm-fun#readme",
   "devDependencies": {
+    "faker": "^4.1.0",
     "jest": "^24.8.0"
-  }
+  },
+  "dependencies": {}
 }
